@@ -203,6 +203,205 @@ literal|"schema.xml"
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testShareSchema
+specifier|public
+name|void
+name|testShareSchema
+parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|ParserConfigurationException
+throws|,
+name|SAXException
+block|{
+specifier|final
+name|File
+name|workDir
+init|=
+operator|new
+name|File
+argument_list|(
+name|TEMP_DIR
+argument_list|,
+name|this
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|workDir
+operator|.
+name|exists
+argument_list|()
+condition|)
+block|{
+name|FileUtils
+operator|.
+name|deleteDirectory
+argument_list|(
+name|workDir
+argument_list|)
+expr_stmt|;
+block|}
+name|assertTrue
+argument_list|(
+literal|"Failed to mkdirs workDir"
+argument_list|,
+name|workDir
+operator|.
+name|mkdirs
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|String
+name|solrHome
+init|=
+name|SolrResourceLoader
+operator|.
+name|locateSolrHome
+argument_list|()
+decl_stmt|;
+name|File
+name|fconf
+init|=
+operator|new
+name|File
+argument_list|(
+name|solrHome
+argument_list|,
+literal|"solr.xml"
+argument_list|)
+decl_stmt|;
+specifier|final
+name|CoreContainer
+name|cores
+init|=
+operator|new
+name|CoreContainer
+argument_list|(
+name|solrHome
+argument_list|)
+decl_stmt|;
+name|System
+operator|.
+name|setProperty
+argument_list|(
+literal|"shareSchema"
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|cores
+operator|.
+name|load
+argument_list|(
+name|solrHome
+argument_list|,
+name|fconf
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|cores
+operator|.
+name|setPersistent
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|cores
+operator|.
+name|isShareSchema
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|CoreDescriptor
+name|descriptor1
+init|=
+operator|new
+name|CoreDescriptor
+argument_list|(
+name|cores
+argument_list|,
+literal|"core1"
+argument_list|,
+literal|"./collection1"
+argument_list|)
+decl_stmt|;
+name|SolrCore
+name|core1
+init|=
+name|cores
+operator|.
+name|create
+argument_list|(
+name|descriptor1
+argument_list|)
+decl_stmt|;
+name|CoreDescriptor
+name|descriptor2
+init|=
+operator|new
+name|CoreDescriptor
+argument_list|(
+name|cores
+argument_list|,
+literal|"core2"
+argument_list|,
+literal|"./collection1"
+argument_list|)
+decl_stmt|;
+name|SolrCore
+name|core2
+init|=
+name|cores
+operator|.
+name|create
+argument_list|(
+name|descriptor2
+argument_list|)
+decl_stmt|;
+name|assertSame
+argument_list|(
+name|core1
+operator|.
+name|getSchema
+argument_list|()
+argument_list|,
+name|core2
+operator|.
+name|getSchema
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|core1
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|core2
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|cores
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 annotation|@
 name|Test
 DECL|method|testPersist
